# WaveST-Gate

./: .gitignore  .nojekyll  CITATION.cff  LICENSE  README.md  codemeta.json  index.html  pyproject.toml
assets/: index-C4RkSAuG.css  index-COwPkDRj.js  index-CReNIAZt.js  index-CjyhoBwf.css
data/: spatial-demo.json
data_manifest/: wavestgate_breast_core.yaml  wavestgate_submission_breast_external.yaml  wavestgate_wu_swarbrick_visium.yaml
docs/: data_download.md  nature_claim_evidence_matrix.md  nature_target_completion_status.md  project_brief.md  submission_data_plan.md  xenium_to_visium_benchmark_protocol.md
tests/: test_benchmark_datasheet.py  test_completion_audit.py  test_data_pipeline.py  test_environment_report.py  test_final_doi_gate.py  test_finalize_submission.py  test_image_contribution.py  test_leakage_fairness_audit.py  test_manuscript_figure_legends.py  test_manuscript_figures.py  test_manuscript_methods.py  test_manuscript_statements.py  test_manuscript_tables.py  test_model.py  test_real_cli.py  test_release_metadata.py  test_reviewer_preflight.py  test_sensitivity_evidence.py  test_submission_artifacts.py  test_submission_readiness.py  test_training.py  test_wavelet.py
tools/: create_doctoral_report_docx.js  export_editable_exact_overlay.py  export_editable_pdf_from_svg.py  export_editable_svg_edit_priority.py  export_editable_svg_rebuild.py  export_reference_style_vector_pdf.py  generate_nature_supporting_package.py  make_hires_inset_editable_outputs.py  make_reportlab_dejavu_editable_pdf.py  make_true_editable_text_no_visual_change.py  (+3 more)
(+181 files in other folders)
